benchmark-results/7/merge/cseq/concurrentwitness2test.2024-11-08_13-30-27.logfiles/SV-COMP23_unreach-call.cseq-safe015_rmo.yml.log
ConcurrentWitness2Test/start.sh svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/safe015_rmo.yml/safe015_rmo.i --graphml-witness svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/safe015_rmo.yml/witness.graphml


--------------------------------------------------------------------------------


Traceback (most recent call last):
  File "/home/runner/work/ConcurrentWitness2Test/ConcurrentWitness2Test/ConcurrentWitness2Test/main.py", line 85, in translate_to_c
    sys.exit(-1)
SystemExit: -1
/tmp/BenchExec_run_4l0atr1u/tmp/tmpy8pb0guk.c
Compilation started
/tmp/BenchExec_run_4l0atr1u/tmp/tmpy8pb0guk.c: In function ‘P0’:
/tmp/BenchExec_run_4l0atr1u/tmp/tmpy8pb0guk.c:584:19: error: ‘FALSE’ undeclared (first use in this function)
  584 |   weak$$choice0 = FALSE;;
      |                   ^~~~~
/tmp/BenchExec_run_4l0atr1u/tmp/tmpy8pb0guk.c:584:19: note: each undeclared identifier is reported only once for each function it appears in
/tmp/BenchExec_run_4l0atr1u/tmp/tmpy8pb0guk.c: In function ‘P2’:
/tmp/BenchExec_run_4l0atr1u/tmp/tmpy8pb0guk.c:635:19: error: ‘FALSE’ undeclared (first use in this function)
  635 |   weak$$choice0 = FALSE;;
      |                   ^~~~~
/tmp/BenchExec_run_4l0atr1u/tmp/tmpy8pb0guk.c: In function ‘main’:
/tmp/BenchExec_run_4l0atr1u/tmp/tmpy8pb0guk.c:710:19: error: ‘FALSE’ undeclared (first use in this function)
  710 |   weak$$choice0 = FALSE;;
      |                   ^~~~~
/tmp/BenchExec_run_4l0atr1u/tmp/tmpy8pb0guk.c:721:19: error: ‘TRUE’ undeclared (first use in this function)
  721 |   weak$$choice1 = TRUE;;
      |                   ^~~~

Compilation ended (exit code 1)
Verdict: Compilation error
Verdict: Unknown error
